# python-sql-unit-testing-poc

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.pglite/: package-lock.json  package.json
redshift_compat/: __init__.py  compat.py
sql/: schema.sql  seed_data.sql
sql/sample_queries/: call_procedures.rsql  ctas_recon.rsql  daily_stats_ddl.rsql  delete_existing.rsql  insert_mapping.rsql  stored_procedure.rsql  template_date_query.rsql  truncate_insert.rsql
src/: __init__.py  rsql_executor.py
tests/: conftest.py  test_ctas_queries.py  test_delete_queries.py  test_insert_mapping.py  test_insert_queries.py  test_redshift_compat.py  test_stored_procedures.py  test_template_substitution.py
